Added focus on login page

--- a/TravelApp/Help/login.html
+++ b/TravelApp/Help/login.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Help for logging</title>
+        <title>Help for login</title>
         <style type="text/css">
             body {
                 max-width: 650px;
@@ -44,7 +44,7 @@
         </p>
 
         <div style="border: 1px solid black; padding-left: 5%; padding-top: 10px; padding-bottom: 10px;">
-            <h2>Lista prečica</h2>
+            <h2>List of shortcuts</h2>
             <ul>
                 <li>Move to the next field: Tab</li>
                 <li>Login (when a field is in focus): Enter </li>
