--- a/TravelApp/Help/allTripsAgent.html
+++ b/TravelApp/Help/allTripsAgent.html
@@ -21,25 +21,28 @@
     <body>
         <h1>All trips</h1>
         <p>
-            After successful login you can see this page
+            After successful login you can see this page.
         </p>
         <p>
             The page displays the following elements:
         </p>
         <div>
-            <img src="alltripsItems.png" width="100%" />
+            <img src="allTripsAgent.png" width="100%" />
         </div>
         <ol>
             <li>Search field</li>
             <li>Sort type selection field</li>
+            <li>Add trip button</li>
             <li>Trip display card</li>
         </ol>
 
         <p>
             - A maximum of 50 characters can be entered in the search field. </br>
-            - We can specify the sorting criteria using the selection field </br>
+            - We can specify the sorting criteria using the selection field. </br>
             - On the trip display card, we can see basic information about trip such as: name, image, description, price.
             Also at the bottom of the card there is a <i>See Details</i> button which, when clicked, opens a page for displaying details about the selected trip.
+            There is also a <i>Delete</i> button. By pressing it and then confirming that action, you can delete the trip.</br>
+            - By pressing the <i>Add trip</i> button, you go to the form for adding a trip.
         </p>
     </body>
 
