--- a/TravelApp/Help/myReservation.html
+++ b/TravelApp/Help/myReservation.html
@@ -21,7 +21,7 @@
     <body>
         <h1>My reservations table</h1>
         <p>
-            If you want to see a list of all reserved trips, you must first navigate to the page 'Reservations'.
+            If you want to see a list of all your own reserved trips, you must first navigate to the page 'Reservations'.
         </p>
         <div>
             <img src="myReservationNavigation.png" width="100%" />
@@ -48,10 +48,10 @@
         </ol>
         <p>
             - A maximum of 50 characters can be entered in the search field. </br>
-            - Each row in the table can be sorted </br>
-            - The table shows a list of all reserved trips </br>
-            - By selecting a row in the table and clicking the <b>buy button</b>, you can <b>buy a trip</b> </br>
-            - By selecting a row in the table and clicking the <b>call off button</b>, you can <b>call off a reservation</b> </br>
+            - Each row in the table can be sorted.</br>
+            - The table shows a list of all your own reserved trips.</br>
+            - By selecting a row in the table and clicking the <b>buy button</b>, you can <b>buy a trip</b>.</br>
+            - By selecting a row in the table and clicking the <b>call off button</b>, you can <b>call off a reservation</b>.</br>
             - If there is no data in the table the buttons will be disabled
         </p>
     </body>
