--- a/TravelApp/Help/myTrips.html
+++ b/TravelApp/Help/myTrips.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Help for stay and eat table</title>
+        <title>Help for my trips table</title>
         <style type="text/css">
             body {
                 max-width: 650px;
@@ -19,20 +19,19 @@
         </style>    
     </head>
     <body>
-        <h1>Stay and eat table</h1>
+        <h1>My trips table</h1>
         <p>
-            If you want to see a list of all available restaurants and accommodation, you must first navigate to the page 'Stay&Eat'.
+            If you want to see a list of all purchased trips, you must first navigate to the page 'My trips'.
         </p>
         <div>
-            <img src="stayAndEat.png" width="100%" />
+            <img src="myTrips.png" width="100%" />
         </div>
         <p>
-            The page contains a table in which the name, address, type, link are defined for each restaurant/accommodation
+            The page contains a table in which the trips, price, start date, end date and purchase date
         </p>
         <p>
             - Also on the page there is a <i>Search</i> field that enables searching by table. A maximum of 50 characters can be entered in the search field. </br>
             - Each row in the table can be sorted </br>
-            - Clicking on the link <i>see more</i> will take you to the official page of the selected restaurant/accommodation
         </p>
     </body>
 
