Added new helpers

--- a/TravelApp/Help/index.html
+++ b/TravelApp/Help/index.html
@@ -1,56 +1,59 @@
 ﻿<!DOCTYPE html>
 <html>
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Help</title>
-    <style type="text/css">
-        body {
-            max-width: 650px;
-            line-height: 1.6;
-            font-size: 18px;
-            color: #333;
-            padding: 0 10px
-        }
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <title>Help</title>
+        <style type="text/css">
+            body {
+                max-width: 650px;
+                line-height: 1.6;
+                font-size: 18px;
+                color: #333;
+                padding: 0 10px
+            }
 
-        h1, h2, h3 {
-            line-height: 1.2
-        }
-    </style>
-</head>
-<body>
-    <div>
-        <img src="airplane.ico" height="80px" />
-    </div>
-    <h1>System help for travel in Serbia</h1>
-    Welcome to the help system for travel management in Serbia!
-    <br />
-    Below you can see the following help pages:
-    <ul>
-        <p style="font-size: 1.5rem; margin: 0;">User profiles</p>
-        <li><a href="login.html">Login on system</a></li>
-        <li><a href="register.html">Sign up new profile</a></li>
-        <br></br>
+            h1, h2, h3 {
+                line-height: 1.2
+            }
+        </style>    
+    </head>
+    <body>
+        <div>
+            <img src="airplane.ico" height="80px" />
+        </div>
+        <h1>System help for travel in Serbia</h1>
+        Welcome to the help system for travel management in Serbia!
+        <br />
+        Below you can see the following help pages:
+        <ul>
+            <p style="font-size: 1.5rem; margin: 0;">User profiles</p>
+            <li><a href="login.html">Login on system</a></li>
+            <li><a href="register.html">Sign up new profile</a></li>
+            <br></br>
 
-        <p style="font-size: 1.5rem; margin: 0;">Options for customers</p>
-        <li><a href="allTrips.html">List of trips</a></li>
-        <li><a href="allAttractions.html">List of attractions</a></li>
-        <li><a href="stayAndEat.html">Table of accommodation and restaurants</a></li>
-        <li><a href="myTrips.html">My trips (history of purchased trips)</a></li>
-        <li><a href="myReservation.html">My reservations</a></li>
-        <li><a href="">Details about a trip</a></li>
-        <br></br>
+            <p style="font-size: 1.5rem; margin: 0;">Options for customers</p>
+            <li><a href="allTrips.html">List of trips</a></li>
+            <li><a href="allAttractions.html">List of attractions</a></li>
+            <li><a href="stayAndEat.html">Table of accommodation and restaurants</a></li>
+            <li><a href="myTrips.html">My trips (history of purchased trips)</a></li>
+            <li><a href="myReservation.html">My reservations</a></li>
+            <li><a href="">Details about a trip</a></li>
+            <br></br>
 
-        <p style="font-size: 1.5rem; margin: 0;">Options for agent</p>
-        <li><a href="newTrip.html">Add a trip</a></li>
-        <li><a href="">Add an attraction</a></li>
-        <li><a href="newPlace.html">Add a place</a></li>
-        <li><a href="allTripsAgent.html">List of trips</a></li>
-        <li><a href="allAttractionsAgent.html">List of attraction</a></li>
-        <li><a href="stayAndEatAgent.html">Table of accommodation and restaurants</a></li>
-        <li><a href="soldTrips.html">Sold trips (history of purchased trips)</a></li>
-        <li><a href="reservationAgent.html">Table of reservations</a></li>
-        <li><a href="">Details about a trip</a></li>
-    </ul>
-</body>
+            <p style="font-size: 1.5rem; margin: 0;">Options for agent</p>
+            <li><a href="newTrip.html">Add a trip</a></li>
+            <li><a href="newAttraction.html">Add an attraction</a></li>
+            <li><a href="newPlace.html">Edit a place</a></li>
+            <li><a href="newTrip.html">Edit a trip</a></li>
+            <li><a href="newAttraction.html">Edit an attraction</a></li>
+            <li><a href="newPlace.html">Add a place</a></li>
+            <li><a href="allTripsAgent.html">List of trips</a></li>
+            <li><a href="allAttractionsAgent.html">List of attraction</a></li>
+            <li><a href="stayAndEatAgent.html">Table of accommodation and restaurants</a></li>
+            <li><a href="soldTrips.html">Sold trips (history of purchased trips)</a></li>
+            <li><a href="reservationAgent.html">Table of reservations</a></li>
+            <li><a href="">Details about a trip</a></li>
+        </ul>
+    </body>
 </html>
