--- a/TravelApp/Help/stayAndEatAgent.html
+++ b/TravelApp/Help/stayAndEatAgent.html
@@ -42,8 +42,10 @@
             - Each row in the table can be sorted.</br>
             - The table shows a list of all restaurants and accomodatios.</br>
             - Clicking on the link <i>see more</i> will take you to the official page of the selected restaurant/accommodation </br>
-            - The last row of the table represents the delete button. Clicking on that button deletes the restaurant/accommodation of the row in which the button was pressed. </br>
-            - To delete the restaurant/accommodation you will need to confirm your action.
+            - The penultimate row (blue button) of the table represents the <b>delete button</b>. Clicking on that button deletes the restaurant/accommodation of the row in which the button was pressed. </br>
+            - To delete the restaurant/accommodation you will need to confirm your action. <br />
+            - The penultimate row (blue button) of the table represents the <b>edit button</b>. Clicking on that button edits the restaurant/accommodation of the row in which the button was pressed. </br>
+            - To edit the restaurant/accommodation you will need to confirm your action.
         </p>
     </body>
 
