--- a/TravelApp/Help/index.html
+++ b/TravelApp/Help/index.html
@@ -38,22 +38,19 @@
             <li><a href="stayAndEat.html">Table of accommodation and restaurants</a></li>
             <li><a href="myTrips.html">My trips (history of purchased trips)</a></li>
             <li><a href="myReservation.html">My reservations</a></li>
-            <li><a href="">Details about a trip</a></li>
+            <li><a href="tripDetailsClient.html">Details about a trip</a></li>
             <br></br>
 
             <p style="font-size: 1.5rem; margin: 0;">Options for agent</p>
-            <li><a href="newTrip.html">Add a trip</a></li>
-            <li><a href="newAttraction.html">Add an attraction</a></li>
-            <li><a href="newPlace.html">Edit a place</a></li>
-            <li><a href="newTrip.html">Edit a trip</a></li>
-            <li><a href="newAttraction.html">Edit an attraction</a></li>
-            <li><a href="newPlace.html">Add a place</a></li>
+            <li><a href="newTrip.html">Add and Edit a trip</a></li>
+            <li><a href="newAttraction.html">Add and Edit an attraction</a></li>
+            <li><a href="newPlace.html">Add and Edit a place</a></li>
             <li><a href="allTripsAgent.html">List of trips</a></li>
             <li><a href="allAttractionsAgent.html">List of attraction</a></li>
             <li><a href="stayAndEatAgent.html">Table of accommodation and restaurants</a></li>
             <li><a href="soldTrips.html">Sold trips (history of purchased trips)</a></li>
             <li><a href="reservationAgent.html">Table of reservations</a></li>
-            <li><a href="">Details about a trip</a></li>
+            <li><a href="tripDetails.html">Details about a trip</a></li>
         </ul>
     </body>
 </html>
