--- a/TravelApp/Help/newPlace.html
+++ b/TravelApp/Help/newPlace.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Help to add a new place</title>
+        <title>Help to add or edit a place</title>
         <style type="text/css">
             body {
                 max-width: 650px;
@@ -19,10 +19,11 @@
         </style>    
     </head>
     <body>
-        <h1>Add new place</h1>
+        <h1>Add or Edit place</h1>
         <p>
-            You can find this page by navigating to Stay&Eat and then pressing the <i>Add place</i> button
-            The page looks like this:
+            You can find this page by navigating to Stay&Eat and then pressing the <i>Add place</i> button </br>
+            Or for editing you can press the last button in column of table and pick place for editing.
+            The pages looks like this:
         </p>
         <div>
             <img src="newPlace.png" width="100%" />
@@ -32,15 +33,15 @@
             <li>Address input field</li>
             <li>Link input field</li>
             <li>Type selection</li>
-            <li>Create button</li>
+            <li>Create (Edit) button</li>
             <li>Close button</li>
         </ol>
 
         <p>
-            To successfully create an accommodation/restaurant you must fill in all fields. 
+            To successfully create or edit an accommodation/restaurant you must fill in all fields. 
             The minimum number of characters for name and address is three (3). The link must be in the appropriate format. 
             And then choose which type of place you want to add. 
-            If all entries are correct, you will be able to click the <i>Create</i> button and create a place. 
+            If all entries are correct, you will be able to click the <i>Create</i> or <i>Edit</i> button and create/edit a place. 
             Click on the <i>Close</i> button (x) to close the window and return to Stay&Eat page. 
             <b>But beware all previous changes will be deleted!!!</b>
         </p>
