--- a/TravelApp/Help/newTrip.html
+++ b/TravelApp/Help/newTrip.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Help to add a new trip</title>
+        <title>Help to add and edit a trip</title>
         <style type="text/css">
             body {
                 max-width: 650px;
@@ -19,9 +19,11 @@
         </style>    
     </head>
     <body>
-        <h1>Add new trip</h1>
+        <h1>Add or Edit trip</h1>
         <p>
-            You can find this page by navigating to All Trips and then pressing the <i>Add trip</i> button
+            You can find this page by navigating to All Trips and then pressing the <i>Add trip</i> button <br />
+            For Edit go to details about trip and press Edit button on top right corner<br />
+            Pages looks identically
             The page looks like this:
         </p>
         <div>
@@ -42,20 +44,20 @@
             <li>Attraction selection</li>
             <li>Accomodations selection</li>
             <li>Restaurants selection</li>
-            <li>Create button</li>
+            <li>Save button</li>
             <li>Close button</li>
         </ol>
 
         <p>
-            To successfully create a trip you must fill in all fields.
+            To successfully create or edit a trip you must fill in all fields.
             The minimum number of characters for name, starting and ending location is three (3).
             The maximum number of characters for name is fifty (50).
             Dates cannot be in the past.
             Also the start date must be before the end date.
             By pressing the <i>Add photo</i> button you can import an image from your computer.
             You can assign existing attractions, accommodations and restaurants to the new trip in the selection fields.
-            If all entries are correct, you will be able to click the <i>Create</i> button and create a trip.
-            Click on the <i>Close</i> button (x) to close the window and return to Stay&Eat page.
+            If all entries are correct, you will be able to click the <i>Create</i> or <i>Edit</i> button and create/edit a trip.
+            Click on the <i>Close</i> button (x) to close the window and return to All trips page.
             <b>But beware all previous changes will be deleted!!!</b>
         </p>
 
