--- a/TravelApp/Help/newAttraction.html
+++ b/TravelApp/Help/newAttraction.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Help to add a new attraction</title>
+        <title>Help to add or edit an attraction</title>
         <style type="text/css">
             body {
                 max-width: 650px;
@@ -19,9 +19,10 @@
         </style>    
     </head>
     <body>
-        <h1>Add new attraction</h1>
+        <h1>Add or Edit an attraction</h1>
         <p>
-            You can find this page by navigating to All Attractions and then pressing the <i>Add attraction</i> button
+            You can find this page by navigating to All Attractions and then pressing the <i>Add attraction</i> button </br>
+            Or you can find <i>Edit</i> button on which card of attraction.
             The page looks like this:
         </p>
         <div>
@@ -33,18 +34,17 @@
             <li>Map</li>
             <li>Description</li>
             <li>Add photo button</li>
-            <li>Create button</li>
+            <li>Save button</li>
             <li>Close button</li>
         </ol>
         <p>
-            To successfully create an attraction you must fill in all fields.
+            To successfully create or edit an attraction you must fill in all fields.
             The minimum number of characters for name and address is three (3).
             The maximum number of characters for name is fifty (50).          
             Also the start date must be before the end date.
             By pressing the <i>Add photo</i> button you can import an image from your computer.
-            You can assign existing attractions, accommodations and restaurants to the new trip in the selection fields.
-            If all entries are correct, you will be able to click the <i>Create</i> button and create a trip.
-            Click on the <i>Close</i> button (x) to close the window and return to Stay&Eat page.
+            If all entries are correct, you will be able to click the <i>Save</i> button and create or edit a trip.
+            Click on the <i>Close</i> button (x) to close the window and return to All attractions page.
             <b>But beware all previous changes will be deleted!!!</b>
         </p>
 
