Update helper pages

--- a/TravelApp/Help/newAttraction.html
+++ b/TravelApp/Help/newAttraction.html
@@ -58,6 +58,8 @@
             <ul>
                 <li>Move to the next field: Tab</li>
                 <li>Login (when a field is in focus): Enter </li>
+                <li>Leave the page: Esc </li>
+                <li>Send location from address input field to  map: Enter </li>
             </ul>
         </div>
     </body>
