--- a/TravelApp/Help/newPlace.html
+++ b/TravelApp/Help/newPlace.html
@@ -51,6 +51,7 @@
             <ul>
                 <li>Move to the next field: Tab</li>
                 <li>Login (when a field is in focus): Enter </li>
+                <li>Leave the page: Esc </li>
             </ul>
         </div>
     </body>
