Added shortcuts in help files

--- a/TravelApp/Help/tripDetailsClient.html
+++ b/TravelApp/Help/tripDetailsClient.html
@@ -62,6 +62,13 @@
             <li>Button for booking</li>
             <li>Button for buy a trip</li>
         </ol>
+
+        <div style="border: 1px solid black; padding-left: 5%; padding-top: 10px; padding-bottom: 10px;">
+            <h2>List of shortcuts</h2>
+            <ul>
+                <li>Back to All trips page: Escape</li>
+            </ul>
+        </div>
     </body>
 
 </html>
