Added shortcuts in help documentation

--- a/TravelApp/Help/tripDetailsClient.html
+++ b/TravelApp/Help/tripDetailsClient.html
@@ -66,9 +66,11 @@
         <div style="border: 1px solid black; padding-left: 5%; padding-top: 10px; padding-bottom: 10px;">
             <h2>List of shortcuts</h2>
             <ul>
+                <li>Scroll left on navigation: Left arrow</li>
+                <li>Scroll right on navigation: Right arrow</li>
+                <li>Choose action: Enter</li>
                 <li>Back to All trips page: Escape</li>
             </ul>
         </div>
     </body>
-
 </html>
