--- a/TravelApp/Help/allAttractions.html
+++ b/TravelApp/Help/allAttractions.html
@@ -43,6 +43,15 @@
             - We can specify the sorting criteria using the selection field </br>
             - On the attraction display card, we can see basic information about attraction such as: name, image, description.
         </p>
+
+        <div style="border: 1px solid black; padding-left: 5%; padding-top: 10px; padding-bottom: 10px;">
+            <h2>List of shortcuts</h2>
+            <ul>
+                <li>Scroll left on navigation: Left arrow</li>
+                <li>Scroll right on navigation: Right arrow</li>
+                <li>Choose action: Enter</li>
+            </ul>
+        </div>
     </body>
 
 </html>
