--- a/TravelApp/Help/allAttractionsAgent.html
+++ b/TravelApp/Help/allAttractionsAgent.html
@@ -46,6 +46,15 @@
             - On the attraction display card, we can see basic information about attraction such as: name, image, description.
             There is also a <i>Delete</i> button. By pressing it and then confirming that action, you can delete the trip.
         </p>
+
+        <div style="border: 1px solid black; padding-left: 5%; padding-top: 10px; padding-bottom: 10px;">
+            <h2>List of shortcuts</h2>
+            <ul>
+                <li>Scroll left on navigation: Left arrow</li>
+                <li>Scroll right on navigation: Right arrow</li>
+                <li>Choose action: Enter</li>
+            </ul>
+        </div>
     </body>
 
 </html>
