--- a/TravelApp/Help/allTrips.html
+++ b/TravelApp/Help/allTrips.html
@@ -41,6 +41,15 @@
             - On the trip display card, we can see basic information about trip such as: name, image, description, price.
             Also at the bottom of the card there is a <i>See Details</i> button which, when clicked, opens a page for displaying details about the selected trip.
         </p>
+
+        <div style="border: 1px solid black; padding-left: 5%; padding-top: 10px; padding-bottom: 10px;">
+            <h2>List of shortcuts</h2>
+            <ul>
+                <li>Scroll left on navigation: Left arrow</li>
+                <li>Scroll right on navigation: Right arrow</li>
+                <li>Choose action: Enter</li>
+            </ul>
+        </div>
     </body>
 
 </html>
