--- a/TravelApp/Help/allTripsAgent.html
+++ b/TravelApp/Help/allTripsAgent.html
@@ -44,6 +44,15 @@
             There is also a <i>Delete</i> button. By pressing it and then confirming that action, you can delete the trip.</br>
             - By pressing the <i>Add trip</i> button, you go to the form for adding a trip.
         </p>
+
+        <div style="border: 1px solid black; padding-left: 5%; padding-top: 10px; padding-bottom: 10px;">
+            <h2>List of shortcuts</h2>
+            <ul>
+                <li>Scroll left on navigation: Left arrow</li>
+                <li>Scroll right on navigation: Right arrow</li>
+                <li>Choose action: Enter</li>
+            </ul>
+        </div>
     </body>
 
 </html>
