--- a/TravelApp/Help/myReservation.html
+++ b/TravelApp/Help/myReservation.html
@@ -54,6 +54,14 @@
             - By selecting a row in the table and clicking the <b>call off button</b>, you can <b>call off a reservation</b>.</br>
             - If there is no data in the table the buttons will be disabled
         </p>
-    </body>
 
+        <div style="border: 1px solid black; padding-left: 5%; padding-top: 10px; padding-bottom: 10px;">
+            <h2>List of shortcuts</h2>
+            <ul>
+                <li>Scroll left on navigation: Left arrow</li>
+                <li>Scroll right on navigation: Right arrow</li>
+                <li>Choose action: Enter</li>
+            </ul>
+        </div>
+    </body>
 </html>
