--- a/TravelApp/Help/myTrips.html
+++ b/TravelApp/Help/myTrips.html
@@ -33,6 +33,14 @@
             - Also on the page there is a <i>Search</i> field that enables searching by table. A maximum of 50 characters can be entered in the search field. </br>
             - Each row in the table can be sorted </br>
         </p>
-    </body>
 
+        <div style="border: 1px solid black; padding-left: 5%; padding-top: 10px; padding-bottom: 10px;">
+            <h2>List of shortcuts</h2>
+            <ul>
+                <li>Scroll left on navigation: Left arrow</li>
+                <li>Scroll right on navigation: Right arrow</li>
+                <li>Choose action: Enter</li>
+            </ul>
+        </div>
+    </body>
 </html>
