--- a/TravelApp/Help/reservationAgent.html
+++ b/TravelApp/Help/reservationAgent.html
@@ -35,6 +35,14 @@
             - Each row in the table can be sorted </br>
             - The table shows a list of all reserved trips </br>
         </p>
-    </body>
 
+        <div style="border: 1px solid black; padding-left: 5%; padding-top: 10px; padding-bottom: 10px;">
+            <h2>List of shortcuts</h2>
+            <ul>
+                <li>Scroll left on navigation: Left arrow</li>
+                <li>Scroll right on navigation: Right arrow</li>
+                <li>Choose action: Enter</li>
+            </ul>
+        </div>
+    </body>
 </html>
