--- a/TravelApp/Help/soldTrips.html
+++ b/TravelApp/Help/soldTrips.html
@@ -44,6 +44,14 @@
             - In the sold trips table, the sold trips are displayed depending on the previously selected criteria. Each row in a table can be sorted.</br>
             - Finally, we can see the total price of the trips sold, as well as the number of trips sold.
         </p>
-    </body>
 
+        <div style="border: 1px solid black; padding-left: 5%; padding-top: 10px; padding-bottom: 10px;">
+            <h2>List of shortcuts</h2>
+            <ul>
+                <li>Scroll left on navigation: Left arrow</li>
+                <li>Scroll right on navigation: Right arrow</li>
+                <li>Choose action: Enter</li>
+            </ul>
+        </div>
+    </body>
 </html>
