--- a/TravelApp/Help/stayAndEat.html
+++ b/TravelApp/Help/stayAndEat.html
@@ -34,6 +34,14 @@
             - Each row in the table can be sorted </br>
             - Clicking on the link <i>see more</i> will take you to the official page of the selected restaurant/accommodation
         </p>
-    </body>
 
+        <div style="border: 1px solid black; padding-left: 5%; padding-top: 10px; padding-bottom: 10px;">
+            <h2>List of shortcuts</h2>
+            <ul>
+                <li>Scroll left on navigation: Left arrow</li>
+                <li>Scroll right on navigation: Right arrow</li>
+                <li>Choose action: Enter</li>
+            </ul>
+        </div>
+    </body>
 </html>
