--- a/TravelApp/Help/stayAndEatAgent.html
+++ b/TravelApp/Help/stayAndEatAgent.html
@@ -47,6 +47,14 @@
             - The penultimate row (blue button) of the table represents the <b>edit button</b>. Clicking on that button edits the restaurant/accommodation of the row in which the button was pressed. </br>
             - To edit the restaurant/accommodation you will need to confirm your action.
         </p>
-    </body>
 
+        <div style="border: 1px solid black; padding-left: 5%; padding-top: 10px; padding-bottom: 10px;">
+            <h2>List of shortcuts</h2>
+            <ul>
+                <li>Scroll left on navigation: Left arrow</li>
+                <li>Scroll right on navigation: Right arrow</li>
+                <li>Choose action: Enter</li>
+            </ul>
+        </div>
+    </body>
 </html>
